[package]
name = "pathfinding_rs2py"
version = "0.1.0"
edition = "2021"
authors = ["Mario Geiger <geiger.mario@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pathfinding"
crate-type = ["cdylib"]

[dependencies]
pathfinding = "4.2.1"
pyo3 = { version = "0.18.3", features = ["abi3-py37"] }
numpy = { version = "0.18.0" }
ordered-float = { version = "3.7.0" }
