[package]
name = "pathfinding_rs2py"
version = "0.1.1"
edition = "2021"
authors = ["Mario Geiger <geiger.mario@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pathfinding"
crate-type = ["cdylib"]

[dependencies]
pathfinding = "4.*"
pyo3 = { version = "0.20.0", features = ["abi3-py37"] }
numpy = { version = "0.20.0" }
ordered-float = { version = "4.*" }
